# observer-coordinator-insights

./: .automation-scope.yaml  .commitlintrc.json  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .license-header.txt  .master_key  .mergify.yml  .pre-commit-config.yaml  .releaserc.json  .renovaterc.json  .secrets.baseline  =6.0  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_GUIDE.md  AUTONOMOUS_SDLC_COMPLETE_v5.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_V4.md  AUTONOMOUS_SDLC_ENHANCEMENT_COMPLETE.md  AUTONOMOUS_SDLC_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v4.md  AUTONOMOUS_SDLC_EXECUTION_REPORT_v4.1.md  AUTONOMOUS_SDLC_FINAL_REPORT.json  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_MASTER_IMPLEMENTATION.md  CHANGELOG.md  CITATION.cff  CLAUDE_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  CONTEXT_AWARE_SDLC_IMPLEMENTATION.md  CONTRIBUTING.md  Dockerfile  (+62 more)
.benchmarks/: README.md  config.yml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: cd.yml  ci.yml  release.yml  security-scan.yml
.security/: bandit-config.yml  safety-policy.json
.terragon/: config.yaml  discovered_items.json  discovery_metrics.json  value-metrics.json
.terragon/deployments/: global_deployment_20250825_044226.json  global_deployment_20250825_044226.md
.terragon/execution/: autonomous_execution_report_20250825_044902.json  autonomous_execution_report_20250825_044902.md  autonomous_execution_report_20250825_044944.json  autonomous_execution_report_20250825_044944.md  autonomous_execution_report_20250825_045025.json  autonomous_execution_report_20250825_045025.md  autonomous_execution_report_20250825_045113.json  autonomous_execution_report_20250825_045113.md  autonomous_execution_report_20250825_045155.json  autonomous_execution_report_20250825_045155.md  autonomous_execution_report_20250825_045237.json  autonomous_execution_report_20250825_045237.md
.terragon/integration/: autonomous_sdlc_integration_20250825_044927.json  autonomous_sdlc_integration_20250825_044927.md  autonomous_sdlc_integration_20250825_045009.json  autonomous_sdlc_integration_20250825_045009.md  autonomous_sdlc_integration_20250825_045050.json  autonomous_sdlc_integration_20250825_045050.md  (+6 more)
demo_output/: clustering_results.json  performance_report.json  team_compositions.json  validation_report.json
deployment/: deploy.sh  docker-compose.production.yml
docker/multi-arch/: build.sh  (+2 more)
docs/: ADVANCED_WORKFLOWS.md  API_REFERENCE.md  AUTONOMOUS_WORKFLOWS.md  BRANCH_PROTECTION.md  DEVELOPMENT.md  MONITORING.md  PERFORMANCE_BASELINE.md  PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  SETUP_REQUIRED.md  WORKFLOW_DEPLOYMENT.md  WORKFLOW_SETUP.md  pr-bl-010.md
final_validation/: clustering_results.json  performance_report.json  team_compositions.json
gen3_optimization_output/: generation3_optimization_results_20250822_132615.json  generation3_optimization_results_20250828_061642.json
generation5_output/: generation5_ai_results_20250828_061917.json  generation5_comprehensive_report_20250826_123052.json  generation5_execution_report_20250828_061917.json  generation5_execution_summary_20250826_123052.json  generation5_team_results_20250828_061917.json
insights/: __init__.py  cluster.py  profile.py  report.py  team.py
locales/: de.json  en.json  es.json  fr.json  ja.json  zh.json
migrations/: env.py
monitoring/: grafana-dashboard.json  prometheus-config.yml
observability/: health-checks.py  opentelemetry-config.yml
production_test/: validation_report.json
quality_reports/: latest_quality_report.json  quality_gates_report_20250807_135720.json  quality_gates_report_20250807_135720.md  quality_gates_summary.json
quantum_demo_results/: quantum_autonomous_demo_results_20250827_230936.json
scripts/: collect-metrics.py  generate-license-report.py  generate-sbom.py  pre-push.sh  quality_gates_runner.py  run_quality_gates.py  security_scan.py  setup-dev.sh  setup-repository.py  update-dependencies.py  validate-workflows.py
security_reports/: bandit_scan.json  security_report_20250807_141429.md  security_scan_20250807_141429.json  security_summary.json
src/: __init__.py  adaptive_resilience_system.py  advanced_monitoring.py  advanced_quantum_security.py  advanced_research_framework.py  advanced_security_framework.py  autonomous_deployment_orchestrator.py  autonomous_enhancement_engine.py  autonomous_execution_engine.py  autonomous_integration_orchestrator.py  autonomous_quality_assurance.py  autonomous_quantum_intelligence.py  autonomous_quantum_orchestrator.py  autonomous_research_orchestrator.py  autonomous_resilience_framework.py  autonomous_self_healing_system.py  autonomous_value_orchestrator.py  comprehensive_logging_system.py  comprehensive_quality_gates.py  config_validation.py  core_value_orchestrator.py  distributed_processing.py  enhanced_error_handling.py  enterprise_features.py  error_handling.py  gen2_robustness.py  gen3_optimization.py  gen4_enhanced_main.py  generation3_advanced_optimization.py  generation5_ai_enhancement_engine.py  global_deployment_orchestrator.py  health_endpoints.py  intelligent_auto_scaling.py  intelligent_scaling.py  intelligent_security_framework.py  main.py  monitoring.py  performance.py  performance_optimization_engine.py  progressive_quality_gates.py  (+8 more)
test_output/: clustering_results.json  performance_report.json  team_compositions.json
tests/: __init__.py  conftest.py  test_cluster.py  test_pipeline_guard.py  test_profile.py  test_team.py
validation_output/: clustering_results.json  performance_report.json  team_compositions.json
validation_test/: clustering_results.json  performance_report.json  team_compositions.json
(+224 files in other folders)
